--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -8,7 +8,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: rgb(204, 202, 202);
   color: #333;
 }
 
