update style on  todo app

--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -7,11 +7,7 @@
 }
 
 body {
-  background: linear-gradient(
-    90deg,
-    rgba(48, 16, 255, 1) 0%,
-    rgba(100, 115, 255, 1) 100%
-  );
+  background: linear-gradient(90deg, #7b113a 0%, #845460 100%);
 }
 .todo_app {
   display: flex;
@@ -19,7 +15,7 @@ body {
   justify-content: flex-start;
   width: 520px;
   min-height: 600px;
-  background: #161a2b;
+  background: #150e56;
   text-align: center;
   margin: 128px auto;
   border-radius: 10px;
@@ -45,6 +41,8 @@ h1 {
   padding: 14px 32px 14px 16px;
   border-radius: 4px 0 0 4px;
   border: 2px solid #5d0cff;
+  font-size: medium;
+  font-weight: bold;
   outline: none;
   width: 320px;
   background: transparent;
@@ -59,6 +57,8 @@ h1 {
   padding: 16px;
   border: none;
   border-radius: 0 4px 4px 0;
+  font-size: medium;
+  font-weight: bold;
   cursor: pointer;
   outline: none;
   background: linear-gradient(
