--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -82,6 +82,27 @@ h1 {
   );
   padding: 16px 22px;
 }
+.reset-button {
+  border: none;
+  border-radius: 4px;
+  font-size: large;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    90deg,
+    rgb(117, 5, 48) 0%,
+    rgb(173, 59, 112) 100%
+  );
+  padding: 16px 22px;
+  color: #000;
+  text-transform: capitalize;
+}
+.r-btn {
+  margin: 10px;
+  display: flex;
+  align-items: flex-end;
+}
 
 .todo-container {
   display: flex;
